--- a/client/src/pages/homePage/HomePage.css
+++ b/client/src/pages/homePage/HomePage.css
@@ -3,8 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-top: 2rem;
   background: #0f0c29;
   background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
@@ -15,15 +14,15 @@
   position: relative;
 }
 
-.container-new {
+.container-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 3rem;
 }
 
 .bar {
-  width: 8rem;
+  width: 10rem;
   height: 0.3rem;
   background: #ff3cac;
   background: linear-gradient(to right, #ff3cac, #562b7c, #2b86c5);
@@ -32,6 +31,13 @@
 
 section h2 {
   color: red;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-left: 0.5rem;
+  width: 5rem;
+}
+
+.image-section3 {
+  background-image: url("https://cdn.pixabay.com/photo/2014/04/02/11/02/army-305276_1280.png");
+  width: 100%;
+  height: 10rem;
 }
