Ajout composant weapon

--- a/client/src/components/weaponsCard/weaponsCard.css
+++ b/client/src/components/weaponsCard/weaponsCard.css
@@ -1,4 +1,15 @@
+.popular-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .weapons-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 300px;
   border-radius: 10px;
   overflow: hidden;
