récupération de l'API dans le front

--- a/client/src/components/navBar/NaveBar.css
+++ b/client/src/components/navBar/NaveBar.css
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #333;
+  background: #152331;
+  background: linear-gradient(to right, #152331, #000000);
   padding: 10px 20px;
 }
 
