--- a/client/src/components/weaponsCard/weaponsCard.css
+++ b/client/src/components/weaponsCard/weaponsCard.css
@@ -10,11 +10,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 300px;
+  margin: 2rem;
+  width: 15rem;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  background: white;
+  background: rgb(179, 177, 177);
   text-align: center;
   transition: transform 0.3s ease-in-out;
 }
